--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/security_app_db?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=85n45a55B
+spring.datasource.password=root
 
 # Hibernate properties
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
